fix: Fix broken UI

--- a/apps/block_scout_web/assets/css/theme/_kanvas_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_kanvas_variables.scss
@@ -748,6 +748,7 @@ footer {
       padding-top: 0 !important;
 
       .dashboard-banner-chart {
+        max-width: 100%;
         height: auto !important;
       }
 
